--- a/g.html
+++ b/g.html
@@ -4,19 +4,47 @@
     <meta charset="UTF-8">
     <script src="http://www.hheducloud.gov.cn/js/jquery-1.12.2.min.js"></script>
     <style>
-        #myCanvas{
-            height: 400px;
-            width: 300px;
-            /*background: black;*/
-            /*border-radius: 50%;*/
-            border: 1px solid #e5e5e5;
+        .demo1-bg1{
+            width: 100px;
+            height: 100px;
+            display: -webkit-box;
+            -webkit-box-pack: center;
+            -webkit-box-align: center;
+            margin: 50px auto;
+            background: #fff;
+            border-radius: 50%;
+            box-shadow: 0 0 0 10px red inset;
+        }
+        .demo1-bg2-1,.demo1-bg2-2{
+            position: relative;
+            margin: 0;
+            padding: 0;
+            -webkit-box-flex: 1;
+            height: 80px;
+            background: #fff;
+            border: 10px solid grey;
+        }
+        .demo1-bg2-1{
+            border-radius: 50px 0 0 50px;
+            border-color: grey transparent grey grey;
+            transform-origin: 100% 50%;
+            z-index: 1;
+        }
+        .demo1-bg2-2{
+            border-radius: 0 50px 50px 0;
+            border-color: grey grey grey transparent;
+            transform-origin: 0 50%;
+            z-index: 2;
         }
     </style>
 </head>
 <body>
 
 
-<canvas id="myCanvas" height="500" width="300"></canvas>
+<div class="demo1-bg1">
+    <div id="J_bg2_1" class="demo1-bg2-1"></div>
+    <div id="J_bg2_2" class="demo1-bg2-2"></div>
+</div>
 
 
 
